2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-bcd-ingress-bcdmmm
spec:
  ingressClassName: bcdbcdbcdingressclassbcdbcdbcd
  tls:
  - hosts:
      -  kibana.example.com
    secretName: bcdsecret
  rules:
  - host: kibana.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickstartcd-kb-http
            port:
              number: 5601
